# hdl_localization

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md  nodelet_plugins.xml  package.xml
apps/: align.cpp  global_localization_nodelet.cpp  globalmap_server_nodelet.cpp  hdl_localization_nodelet.cpp
config/: bbs_config.yaml  fpfh_config.yaml  general_config.yaml  globalmap_server.yaml  localization.yaml  ransac_config.yaml  teaser_config.yaml  test.rviz
data/: hdl_501_filtered.pcd  relative.txt
include/fast_gicp/cuda/: brute_force_knn.cuh  compute_derivatives.cuh  compute_mahalanobis.cuh  covariance_estimation.cuh  covariance_regularization.cuh  fast_vgicp_cuda.cuh  find_voxel_correspondences.cuh  gaussian_voxelmap.cuh  ndt_compute_derivatives.cuh  ndt_cuda.cuh  vector3_hash.cuh
include/fast_gicp/gicp/: fast_gicp.hpp  fast_gicp_st.hpp  fast_vgicp.hpp  fast_vgicp_cuda.hpp  fast_vgicp_voxel.hpp  gicp_settings.hpp  lsq_registration.hpp
include/fast_gicp/gicp/experimental/: fast_gicp_mp.hpp  fast_gicp_mp_impl.hpp
include/fast_gicp/gicp/impl/: fast_gicp_impl.hpp  fast_gicp_st_impl.hpp  fast_vgicp_cuda_impl.hpp  fast_vgicp_impl.hpp  lsq_registration_impl.hpp
include/fast_gicp/ndt/: ndt_cuda.hpp  ndt_settings.hpp
include/fast_gicp/ndt/impl/: ndt_cuda_impl.hpp
include/fast_gicp/so3/: so3.hpp
include/hdl_global_localization/: global_localization_results.hpp
include/hdl_global_localization/bbs/: bbs_localization.hpp  occupancy_gridmap.hpp
include/hdl_global_localization/engines/: global_localization_bbs.hpp  global_localization_engine.hpp  global_localization_fpfh_ransac.hpp  global_localization_fpfh_teaser.hpp
include/hdl_global_localization/ransac/: matching_cost_evaluater.hpp  matching_cost_evaluater_flann.hpp  matching_cost_evaluater_voxels.hpp  ransac_pose_estimation.hpp  voxelset.hpp
include/hdl_localization/: delta_estimater.hpp  odom_system.hpp  pose_estimator.hpp  pose_system.hpp
include/kkl/alg/: unscented_kalman_filter.hpp
include/pclomp/: gicp_omp.h  gicp_omp_impl.hpp  ndt_omp.h  ndt_omp_impl.hpp  voxel_grid_covariance_omp.h  voxel_grid_covariance_omp_impl.hpp
launch/: hdl_localization.launch
msg/: ScanMatchingStatus.msg
rviz/: hdl_localization.rviz
scripts/: plot_status.py  runtest_cuda.sh
src/fast_gicp/cuda/: brute_force_knn.cu  compute_derivatives.cu  compute_mahalanobis.cu  covariance_estimation.cu  covariance_estimation_rbf.cu  covariance_regularization.cu  fast_vgicp_cuda.cu  find_voxel_correspondences.cu  gaussian_voxelmap.cu  ndt_compute_derivatives.cu  ndt_cuda.cu
src/fast_gicp/gicp/: fast_gicp.cpp  fast_gicp_st.cpp  fast_vgicp.cpp  fast_vgicp_cuda.cpp  lsq_registration.cpp
src/fast_gicp/gicp/experimental/: fast_gicp_mp.cpp
src/fast_gicp/ndt/: ndt_cuda.cpp
src/hdl_global_localization/bbs/: bbs_localization.cpp
src/hdl_global_localization/engines/: global_localization_bbs.cpp  global_localization_fpfh_ransac.cpp  global_localization_fpfh_teaser.cpp
src/hdl_global_localization/ransac/: ransac_pose_estimation.cpp  voxelset.cpp
src/hdl_localization/: pose_estimator.cpp
src/pclomp/: gicp_omp.cpp  ndt_omp.cpp  voxel_grid_covariance_omp.cpp
srv/: QueryGlobalLocalization.srv  SetGlobalLocalizationEngine.srv  SetGlobalMap.srv
